# neuralflow

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION-SUMMARY.md  LICENSE  PM-EVALUATION.md  QWEN.md  README.md  docker-compose.yml
.claude/: CLAUDE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  docs.yml  pages.yml  test.yml
apps/desktop/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
apps/desktop/e2e/: app.spec.ts
apps/desktop/src/: App.tsx  globals.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: keychain.rs  mod.rs
apps/desktop/src/api/: analytics.ts  auth.ts  client.ts  debug.ts  evaluations.ts  export.ts  plugins.ts  providers.ts  runs.ts  sharing.ts  workflows.ts
apps/desktop/src/canvas/: Canvas.tsx
apps/desktop/src/hooks/: useKeyboardShortcuts.ts
apps/desktop/src/lib/: tauri.ts
docs/: 404.html  PRD.md  _config.yml  index.html
docs/assets/: nav.js  style.css
docs/deployment/: self-hosted.md
docs/guide/: api.html  concepts.html  getting-started.html  nodes.html
docs/roadmap/: FEATURE-ROADMAP.md
docs/user-guide/: index.html
scripts/: dev.sh  preview-docs.sh  setup-dev.sh
templates/: code-reviewer.json  content-writer.json  data-analyzer.json  research-assistant.json  web-scraper.json
(+58 files in other folders)
